# pymysql-term

./: README.md  main.py  pyproject.toml  setup.py
bootloader/template/demo_final/: auth.py  db.py  item_widget.py  main.py  main_window.py  order_dialog_add_edit.py  order_item_widget.py  product_dialog.py
bootloader/template/demo_final/docs/: shoes.sql
bootloader/template/demo_final/ui/: ItemWidget.ui  add_product_dialog.ui  auth.ui  main.ui  order_dialog.ui  order_item_widget.ui
pymysql_terminal/: __init__.py  connection.py  executor.py  formatter.py
